change button color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>Enter heart rate (bpm) and date:</p>
     <input type="text" id="heartRateInput" placeholder="e.g. 140">
     <br>
-    <button class="btn" style="background-color:#8e44ad;" onclick="saveRecord()">Save</button>
+    <button class="btn" style="background-color:#de9afb;" onclick="saveRecord()">Save</button>
     <button id="emailBtn" class="btn" onclick="sendEmail()">Send to My Email</button>
   </div>
 
