--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&family=Quicksand:wght@500&display=swap" rel="stylesheet">
   <title>Cat Heart Rate Timer</title>
   <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
